<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        >    

	       <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:orientation="vertical" >
	
	           <ImageView
	               android:id="@+id/imageView1"
	               android:contentDescription="@string/family"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_gravity="center"
	               android:adjustViewBounds="true"
	               android:scaleType="fitXY"
	               android:src="@drawable/family" />
	
		           <TextView 
		               android:id="@+id/test_text"
		               android:scrollbars="vertical"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:textSize="15sp"
		               android:text="@string/testing_string"/>
		           <TextView 
		               android:id="@+id/test_text_two"
		               android:scrollbars="vertical"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:textSize="15sp"
		               android:text="@string/testing_string_two"/>  		             
             </LinearLayout>
       </ScrollView>
</LinearLayout>
