<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight = "1"
        android:weightSum = "2" >
        <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_weight = "1" >
	        
            <Button
                android:id="@+id/greetings_button"
                android:layout_width="fill_parent"
                android:layout_height = "fill_parent"
                android:gravity="center"
                android:text="@string/greetings"
                />
	    </LinearLayout>
    	<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_weight = "1" >
            <Button
                android:id="@+id/departures_button"
                android:layout_width="fill_parent"
                android:layout_height = "fill_parent"
                android:gravity ="center"
                android:text="@string/departures"
                />            
	    </LinearLayout>	    
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight = "1"
        android:weightSum = "2" >
        <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_weight = "1" >
            <Button
                android:id="@+id/disagreements_button"
                android:layout_width="fill_parent"
                android:layout_height = "fill_parent"
                android:gravity = "center"
                android:text="@string/disagreements"
                />             
	    </LinearLayout>
    	<LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_weight = "1" >
            <Button
                android:id="@+id/dos_and_donts_button"
                android:layout_width="fill_parent"
                android:layout_height = "fill_parent"
                android:gravity = "center"
                android:text="@string/dos_and_donts"
                />            
	    </LinearLayout>	    
    </LinearLayout>

</LinearLayout>